# luminous-cli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: product-announcement.md
src/luminous_cli/: __init__.py  __main__.py  errors.py
src/luminous_cli/cli/: __init__.py  _options.py  auth.py  config_cmd.py  shell.py
src/luminous_cli/cli/resources/: __init__.py  _custom_fields.py  _factory.py  _input.py  _tags.py  bills.py  bills_reports.py  boms.py  channels.py  companies.py  consumption.py  contacts.py  currency.py  custom_fields.py  forecast.py  fulfillment_orders.py  inbound_shipments.py  integration_accounts.py  integration_mappings.py  inventory.py  inventory_aging.py  invoices.py  labels.py  locations.py  payment_obligations.py  prepayments.py  price_levels.py  price_schedules.py  products.py  purchase_order_shipments.py  purchase_orders.py  receiving_reports.py  reports.py  returns.py  sales_orders.py  stock_snapshot.py  suppliers.py  transfer_orders.py  unit_classes.py  unit_conversion_rules.py  (+5 more)
src/luminous_cli/client/: __init__.py  auth.py  http.py  query.py
src/luminous_cli/config/: __init__.py  credentials.py  files.py  models.py
src/luminous_cli/output/: __init__.py  csv_out.py  detect.py  json_out.py  render.py  table.py
