[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "luminous-cli"
version = "0.1.0"
description = "CLI for the Luminous API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "orjson>=3.10.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.scripts]
luminous = "luminous_cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/luminous_cli"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]
